--- a/src/components/data.css
+++ b/src/components/data.css
@@ -1,8 +1,8 @@
 .field-container{
     position: fixed;
     z-index: 1;
-    left: 0;
-    top:0;
+    left: 100;
+    top: 10px;;
     width: 10%;
     height: 10%;
     display: contents;
@@ -13,6 +13,7 @@
 }
 
 .field{
+    align-items: center;
     border-radius: 5px;
     padding:2rem;
     background-color: rgb(247, 245, 224);
@@ -22,4 +23,29 @@
    display: block;
    margin: auto;
 
+}
+.field-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.field-group input,
+.field-group textarea,
+.field-group select {
+  border: 1px solid black;
+  border-radius: 0.3rem;
+  padding: 0.3rem;
+  font-size: 1rem;
+}
+
+.field-group label {
+  margin-bottom: 0.2rem;
+}
+.error {
+  background-color: #f8d7da;
+  color: #df4759;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  margin-bottom: 1rem;
 }
