--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -40,3 +40,15 @@
 .expand{
     width:100%;
 }
+.actions {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .actions svg {
+    cursor: pointer;
+  }
+  
+  .delete-btn {
+    color: #e10d05;
+  }
